# serious-trader-ralph

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  WORKFLOW.md  biome.json  fly.runtime-rs.toml  loop-a-loop-b-architecture.md  package.json  playwright.config.ts  ralph.config.example.yaml  repro-runtime2.ts  skills-lock.json  tsconfig.json
.factory/: ISSUES-63-days.md  PITFALLS.md  PLAN-63-days.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-manual.yml  deploy-portal.yml  deploy-pr-preview.yml  deploy-production.yml  deploy-runtime-rs.yml  deploy-staging-production.yml  ops-dashboard.yml  rollback-production.yml  rollback-runtime-rs.yml  runtime-deployment-evaluate.yml  strategy-lab-curation.yml  strategy-lab-policy-gate.yml  strategy-lab-post-live.yml  strategy-lab-promote.yml  strategy-lab-readiness.yml  strategy-lab-research.yml
apps/portal/: .gitignore  middleware.ts  next.config.js  package.json  proxy.ts  vercel.json  vite.config.ts
apps/worker/: README.md  package.json  wrangler.toml
crates/asset-registry/: Cargo.toml
crates/backtesting-engine/: Cargo.toml
crates/backtesting-engine/src/: lib.rs
crates/cost-model-registry/: Cargo.toml
crates/cost-model-registry/src/: lib.rs
crates/exec-client/: Cargo.toml
crates/exec-client/src/: lib.rs
crates/execution-planner/: Cargo.toml
crates/feature-cache/: Cargo.toml
crates/feature-catalog-registry/: Cargo.toml
crates/feature-catalog-registry/src/: lib.rs
crates/historical-data-lake/: Cargo.toml
crates/market-adapters/: Cargo.toml
crates/portfolio-ledger/: Cargo.toml
crates/portfolio-ledger/src/: lib.rs
crates/reconciler/: Cargo.toml
crates/reconciler/src/: lib.rs
crates/research-registry/: Cargo.toml
crates/risk-engine/: Cargo.toml
crates/runtime-allocator/: Cargo.toml
crates/runtime-ops/: Cargo.toml
crates/strategy-core/: Cargo.toml
crates/strategy-registry/: Cargo.toml
crates/strategy-registry/src/: lib.rs
docs/: BRAND.md  cloudflare-saas-plan.md  landing-page-copy-v2.md  repository-verification-index.md
docs/agent-registry/: metadata.dev.json  metadata.production.json  metadata.staging.json  runbook.md
docs/design-docs/: autonomous-runtime-architecture.md  execution-cost-models.md  historical-data-lake.md
docs/execution/: exec-api-v1.md  execution-client-sdk.md  observability-v1.md  operations-runbook-v1.md  rollout-plan-v1.md  tabletop-simulation-2026-03-03.md  terminal-cutover-plan-v1.md  terminal-fills-ledger-export-v1.md  test-matrix-v1.md
docs/product-specs/: autonomous-runtime-prd.md  strategy-lab-prd.md
docs/reliability/: autonomous-runtime-ops-runbook.md  strategy-desk-ops-runbook.md  strategy-lab-ops-runbook.md
docs/runtime-contracts/: README.md  schema-manifest.v1.json
docs/strategy-desk/: README.md  proof-bundles.md
docs/strategy-lab/: loop-a-perp-prediction-venue-parity.md  loop-a-spot-venue-parity.md  loop-b-venue-parity-artifacts.md  venue-lineage-contracts.md  venue-readiness-matrix.md
patches/: @drift-labs%2Fsdk@2.159.0-beta.2.patch  @orca-so%2Fcommon-sdk@0.7.0.patch
scripts/: com.harness.portal-dev.plist  deploy_preview_worker.mjs  generate_loop_a_schemas.ts  generate_runtime_contract_schemas.ts  keep-portal-dev.sh  overnight-paper.sh
scripts/agent_registry/: sync.ts
scripts/factory/: gate.sh  preview.sh
scripts/runtime_rs/: fly_common.mjs  fly_deploy.mjs  fly_smoke.mjs
services/runtime-rs/: Cargo.toml  Dockerfile  README.md
services/runtime-rs/fixtures/: runtime-feature-cache-replay.jup_usdc.v1.json  runtime-feature-cache-replay.sol_usdc.v1.json  runtime-feed-replay.jup_usdc.v1.json  runtime-feed-replay.sol_usdc.v1.json
services/runtime-rs/src/: lib.rs  main.rs  paper_execution.rs
skills/: README.md
src/agent/: control.ts  index.ts  orchestrator.ts  prompt.ts  types.ts
src/cli/: agent.ts  client.ts  doctor.ts  tools.ts  update.ts
src/config/: config.ts
src/gateway/: server.ts
src/harness/: manager.ts  proof.ts
src/llm/: index.ts  openai_chat.ts  types.ts
src/ops/: dashboard.ts  rollback.ts
src/runner/: comments.ts  config.ts  heartbeat.ts  service.ts
src/runtime/: session_store.ts
src/tools/: index.ts  loader.ts  market_tools.ts  registry.ts  tool_deps.ts  tools.ts  validate.ts
src/util/: suppress_bigint_warning.ts
tests/browser/: harness-proof.spec.ts
tests/integration/: _worker_live_test_utils.ts  terminal_execution_e2e.integration.test.ts  tools.integration.test.ts  worker_agent_runtime_live.integration.test.ts  worker_agent_tools_live.integration.test.ts  worker_backtests.integration.test.ts  worker_historical_ohlcv.integration.test.ts  worker_x402_live.integration.test.ts
tests/unit/: _backtests_test_utils.ts  _conversation_test_utils.ts  _relay_signed_test_utils.ts  execution_contract_v1_schemas.test.ts  harness_manager.test.ts  loop_a_contracts.test.ts  ops_dashboard.test.ts  ops_rollback.test.ts  policy.test.ts  portal_agent_registry_metadata_routes.test.ts  portal_api_catalog_routes.test.ts  portal_backtests_utils.test.ts  portal_execution_client.test.ts  portal_openapi_routes.test.ts  portal_runtime_operator_route.test.ts  portal_runtime_strategy_desk_contracts.test.ts  portal_runtime_strategy_desk_route.test.ts  portal_strategy_desk_handoff_selection.test.ts  portal_terminal_account_risk.test.ts  portal_terminal_depth_chart.test.ts  portal_terminal_execution_inspector.test.ts  portal_terminal_fills_ledger.test.ts  portal_terminal_hotkeys.test.ts  portal_terminal_live_positions.test.ts  portal_terminal_market_chart.test.ts  portal_terminal_modes.test.ts  portal_terminal_open_orders.test.ts  portal_terminal_orderbook_ladder.test.ts  portal_terminal_performance_budget.test.ts  portal_terminal_realtime_transport.test.ts  portal_terminal_status_bar.test.ts  portal_terminal_trade_ticket_validation.test.ts  portal_terminal_trades_tape.test.ts  portal_terminal_venues.test.ts  portal_terminal_workspace_presets.test.ts  portal_waitlist_route.test.ts  redaction.test.ts  runner_config.test.ts  runner_heartbeat.test.ts  runner_service.test.ts  (+133 more)
web/app/: globals.css  page.tsx
(+677 files in other folders)
