[workspace]
members = [
  "crates/exec-client",
  "crates/feature-cache",
  "crates/market-adapters",
  "crates/portfolio-ledger",
  "crates/protocol",
  "crates/risk-engine",
  "crates/runtime-ops",
  "crates/strategy-registry",
  "crates/strategy-core",
  "services/runtime-rs",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8.1"
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "time"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
