[package]
name = "cost-model-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
protocol = { path = "../protocol" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
