[package]
name = "exec-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
protocol = { path = "../protocol" }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
