[package]
name = "portfolio-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
protocol = { path = "../protocol" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde.workspace = true
thiserror.workspace = true
time = { version = "=0.3.44", features = ["formatting", "parsing"] }
