[package]
name = "runtime-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
execution-planner = { path = "../../crates/execution-planner" }
exec-client = { path = "../../crates/exec-client" }
feature-cache = { path = "../../crates/feature-cache" }
market-adapters = { path = "../../crates/market-adapters" }
portfolio-ledger = { path = "../../crates/portfolio-ledger" }
protocol = { path = "../../crates/protocol" }
reconciler = { path = "../../crates/reconciler" }
risk-engine = { path = "../../crates/risk-engine" }
runtime-ops = { path = "../../crates/runtime-ops" }
serde.workspace = true
serde_json.workspace = true
strategy-core = { path = "../../crates/strategy-core" }
strategy-registry = { path = "../../crates/strategy-registry" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time = { version = "=0.3.44", features = ["formatting", "parsing"] }

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
